# sasha

./: .gitignore  Makefile  Makefile.go-service  Makefile.python-service  README.md  docker-compose.yml  go.mod  go.sum
agentsmith/: Makefile  README.md  pyproject.toml
infrastructure/cassandra/: Dockerfile
libraries/cassandra/: cassandra.go  config.go  helpers.go
libraries/encryption/: aes.go  aes_test.go
libraries/environment/: environment.go  loader.go
libraries/gerrors/: Makefile  README.md  codes.go  gerrors.go  gerrors_test.go  test_gerrors.go
libraries/mariana/: README.md  service.go
libraries/risk/: helpers.go  helpers_test.go  risk.go  risk_test.go
libraries/transport/: README.md  http.go  transport.go
libraries/util/: config.go  discord.go  environment.go  hash.go  hash_test.go  random.go  retry.go  rounding.go  rounding_test.go  secrets.go  server.go
service.agentsmith/: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
service.agentsmith/src/: __main__.py  client.py
service.discord/: Dockerfile  main.go
service.discord/client/: client.go  default_client.go  guild_member_add.go  registry.go
service.discord/config/: postgres.sql
service.discord/dao/: dao.go  setup_test.go  touch.go
service.discord/domain/: types.go
service.discord/handler/: helpers.go  (+9 more)
service.github/: Dockerfile  README.md  main.go
service.location-tracker/: Dockerfile  README.md  main.go
service.openai/: Dockerfile  main.go
service.trade-account/: .dockerignore  README.md  main.go
service.trade-engine/: Makefile  README.md  main.go
(+94 files in other folders)
