[tool.poetry]
name = "service.agentsmith"
version = "0.1.0"
description = ""
authors = ["sasha <alexperkins.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.141"
mypy = "^1.2.0"
ruff = "^0.0.261"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
